# MacroManager

./: .gitignore  LICENSE.txt  MacroManager.sln  README.md
Macro/: CMakeLists.txt  MacroManager.vcxproj  MacroManager.vcxproj.filters  changelog.h  gui.cpp  gui.h  hook_manager.cpp  hook_manager.h  input_sim.cpp  input_sim.h  json.hpp  macro.h  macro_manager.cpp  macro_manager.h  main.cpp  persistence.cpp  persistence.h  recorder.cpp  recorder.h  sound_player.cpp  sound_player.h  updater.cpp  updater.h  version.h
Macro/ImGui/: imgui.cpp  imgui.h  imgui_impl_win32.cpp  imgui_stdlib.cpp
installer/: MacroManager.iss
